--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.jpa.show-sql: true
 
 
 # microservices url
-ms.auth=localhost:8100/api/authorization/auth
-ms.benchmark=severity8200-lb-1899177824.us-east-1.elb.amazonaws.com/api/benckmark1/benchmark
-ms.checklist=severity8200-lb-1899177824.us-east-1.elb.amazonaws.com/checklist2/checklist
+ms.auth=localhost:8100/auth
+ms.benchmark=localhost:7000/benchmark
+ms.checklist=localhost:8200/checklist
 
